test/corpus/expr.txt
====
cast
====

select (Foo) f

---
(ql (moduleMember (select (asExprs (asExpr (prefix_cast (typeExpr (className)) (variable (varName (simpleId)))))))))
========
dontcare
========

select foo(_)

---
(ql (moduleMember (select (asExprs (asExpr (call_or_unqual_agg_expr (aritylessPredicateExpr (literalId)) (call_or_unqual_agg_body (underscore))))))))
====
unop
====

select - 5, + 5

---
 (ql (moduleMember (select (asExprs (asExpr (unary_expr (unop (minus)) (literal (integer)))) (asExpr (unary_expr (unop (plus)) (literal (integer))))))))
=====
binop
=====

select 5 + 5, 5 - 5, 5 * 5, 5 / 5, 5 % 5

---

(ql (moduleMember 
  (select 
    (asExprs 
      (asExpr (add_expr (literal (integer)) (addop (plus)) (literal (integer)))) 
      (asExpr (add_expr (literal (integer)) (addop (minus)) (literal (integer)))) 
      (asExpr (mul_expr (literal (integer)) (mulop (star)) (literal (integer)))) 
      (asExpr (mul_expr (literal (integer)) (mulop (slash)) (literal (integer)))) 
      (asExpr (mul_expr (literal (integer)) (mulop (mod)) (literal (integer))))))))

===========
set literal
===========

select [1,2,4]

---

(ql (moduleMember
  (select
    (asExprs
      (asExpr
        (set_literal
          (literal (integer))
          (literal (integer))
          (literal (integer))))))))

====================
uniqueness aggregate
====================

select unique(int x | x = 1 | x)

---

(ql (moduleMember
  (select
    (asExprs
      (asExpr
        (call_or_unqual_agg_expr
          (aritylessPredicateExpr (literalId))
          (call_or_unqual_agg_body
            (varDecl (typeExpr (typeLiteral)) (varName (simpleId)))
            (comp_term (variable (varName (simpleId))) (compop (eq)) (literal (integer)))
            (asExprs (asExpr (variable (varName (simpleId))))))))))))

================
binop precedence
================

select
  // left associative
  5 + 5 - 5,
  5 - 5 + 5,
  // mul binds tighter
  5 + 5 * 5,
  5 + 5 / 5,
  5 * 5 + 5,
  5 / 5 + 5,
  // left associative
  5 / 5 * 5,
  5 * 5 / 5,
  // mod tighter,
  5 * 5 % 5,
  5 % 5 * 5

---

(ql (moduleMember (select (line_comment) 
  (asExprs 
    (asExpr (add_expr (add_expr (literal (integer)) (addop (plus)) (literal (integer))) (addop (minus)) (literal (integer)))) 
    (asExpr (add_expr (add_expr (literal (integer)) (addop (minus)) (literal (integer))) (addop (plus)) (literal (integer)))) 
    (line_comment) 
    (asExpr (add_expr (literal (integer)) (addop (plus)) (mul_expr (literal (integer)) (mulop (star)) (literal (integer))))) 
    (asExpr (add_expr (literal (integer)) (addop (plus)) (mul_expr (literal (integer)) (mulop (slash)) (literal (integer))))) 
    (asExpr (add_expr (mul_expr (literal (integer)) (mulop (star)) (literal (integer))) (addop (plus)) (literal (integer)))) 
    (asExpr (add_expr (mul_expr (literal (integer)) (mulop (slash)) (literal (integer))) (addop (plus)) (literal (integer)))) 
    (line_comment) 
    (asExpr (mul_expr (mul_expr (literal (integer)) (mulop (slash)) (literal (integer))) (mulop (star)) (literal (integer)))) 
    (asExpr (mul_expr (mul_expr (literal (integer)) (mulop (star)) (literal (integer))) (mulop (slash)) (literal (integer)))) 
    (line_comment) 
    (asExpr (mul_expr (mul_expr (literal (integer)) (mulop (star)) (literal (integer))) (mulop (mod)) (literal (integer))))
    (asExpr (mul_expr (mul_expr (literal (integer)) (mulop (mod)) (literal (integer))) (mulop (star)) (literal (integer))))))))
